# forest_surveillance_rover

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  PHASE5_COMPLETION.md  PLAN_SUMMARY.md  README.md  spec-forest-rover-pcb.md
docker/: Dockerfile.arm64  docker-compose.yml
docs/: DEPLOYMENT.md  FIRMWARE_ARCHITECTURE.md  ROS_ARCHITECTURE.md  block-diagram.md  bom.csv  design-notes.md  power-budget.md  sources.md
firmware/: README.md
firmware/STM32_FirmwareProject/: CMakeLists.txt  README.md
firmware/STM32_FirmwareProject/Core/Inc/: config.h  encoder.h  motor_driver.h  sensor_drivers.h  uart_bridge.h
firmware/STM32_FirmwareProject/Core/Src/: encoder.c  main.c  motor_driver.c  sensor_drivers.c  uart_bridge.c
firmware/stm32/Drivers/RFM95W/: rfm95w_lora_driver.c  rfm95w_lora_driver.h
hardware/gerbers/: README.md
hardware/kicad/: README.md  forest-rover.kicad_pcb  forest-rover.kicad_pro  forest-rover.kicad_sch  sym-lib-table
images/: README.md
ros2_workspace/: .colcon-defaults.yaml
ros2_workspace/src/autonomy_manager/: CMakeLists.txt  package.xml
ros2_workspace/src/autonomy_manager/autonomy_manager/: __init__.py  cmd_vel_smoother_node.py  odometry_publisher_node.py  patrol_manager_node.py
ros2_workspace/src/autonomy_manager/config/: cmd_vel_smoother.yaml  ekf.yaml
ros2_workspace/src/autonomy_manager/launch/: phase2_autonomy.launch.py
ros2_workspace/src/base_station_receiver_node/: CMakeLists.txt  package.xml  setup.py
ros2_workspace/src/base_station_receiver_node/base_station_receiver_node/: __init__.py  base_station_receiver_main.py
ros2_workspace/src/base_station_receiver_node/resource/: base_station_receiver_node
ros2_workspace/src/color_tracker_node/: CMakeLists.txt  package.xml
ros2_workspace/src/color_tracker_node/color_tracker_node/: __init__.py  color_tracker.py
ros2_workspace/src/color_tracker_node/config/: color_tracker.yaml
ros2_workspace/src/color_tracker_node/launch/: color_tracker.launch.py
ros2_workspace/src/data_logger_node/: CMakeLists.txt  package.xml
ros2_workspace/src/data_logger_node/config/: data_logger.yaml
ros2_workspace/src/data_logger_node/data_logger_node/: __init__.py  analyze_mission.py  data_logger.py
ros2_workspace/src/data_logger_node/launch/: data_logger.launch.py
ros2_workspace/src/forest_rover_autonomy/: CMakeLists.txt  package.xml
ros2_workspace/src/forest_rover_core/: CMakeLists.txt  package.xml
ros2_workspace/src/forest_rover_description/: CMakeLists.txt  package.xml
ros2_workspace/src/forest_rover_description/launch/: base_station_receiver.launch.py  complete.launch.py  complete.launch.xml  description.launch.py  perception_phase3.launch.py  phase2_bringup.launch.py  phase4_logging.launch.py  phase5_telemetry.launch.py  telemetry_gateway.launch.py
ros2_workspace/src/forest_rover_description/urdf/: forest_rover.urdf.xacro
ros2_workspace/src/forest_rover_hardware/: CMakeLists.txt  package.xml
ros2_workspace/src/forest_rover_msgs/: CMakeLists.txt  package.xml
ros2_workspace/src/forest_rover_msgs/msg/: Detection.msg  DetectionArray.msg  EnvironmentalData.msg  LoRaStatus.msg  MotorCommand.msg  MotorFeedback.msg  RoverEvent.msg  TelemetryHeartbeat.msg
ros2_workspace/src/forest_rover_msgs/srv/: EmergencyStop.srv
ros2_workspace/src/forest_rover_perception/: CMakeLists.txt  package.xml
ros2_workspace/src/forest_rover_utils/: CMakeLists.txt  package.xml
ros2_workspace/src/smoke_detection_node/: CMakeLists.txt  package.xml
ros2_workspace/src/smoke_detection_node/config/: smoke_detection.yaml
ros2_workspace/src/smoke_detection_node/launch/: smoke_detection.launch.py
ros2_workspace/src/smoke_detection_node/smoke_detection_node/: __init__.py  smoke_detection.py
ros2_workspace/src/stm32_firmware_driver/: CMakeLists.txt  package.xml  setup.py
ros2_workspace/src/stm32_firmware_driver/config/: bridge.yaml
ros2_workspace/src/stm32_firmware_driver/launch/: stm32_bridge.launch.py
ros2_workspace/src/stm32_firmware_driver/stm32_firmware_driver/: __init__.py  bridge_node.py  rfm95w_lora_driver.c  rfm95w_lora_driver.h
ros2_workspace/src/telemetry_gateway_node/: CMakeLists.txt  package.xml  setup.py
ros2_workspace/src/telemetry_gateway_node/resource/: telemetry_gateway_node
ros2_workspace/src/telemetry_gateway_node/telemetry_gateway_node/: __init__.py  telemetry_gateway_main.py
ros2_workspace/src/yolo_detector_node/: CMakeLists.txt  package.xml
ros2_workspace/src/yolo_detector_node/config/: yolo_detector.yaml
ros2_workspace/src/yolo_detector_node/launch/: yolo_detector.launch.py
ros2_workspace/src/yolo_detector_node/yolo_detector_node/: __init__.py  yolo_detector.py
simulation/ngspice/: README.md  battery-charger.spice  buck-converter.spice
simulation/qucs-s/: README.md  sensor-frontend.sch
