<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>color_tracker_node</name>
  <version>0.1.0</version>
  <description>Phase 3 red ball tracking node.</description>
  <maintainer email="flux@example.com">Flux</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-cv-bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
