<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_rover_autonomy</name>
  <version>0.1.0</version>
  <description>Forest Rover autonomy stack (decision logic, behavior tree, state machine)</description>
  <maintainer email="flux@example.com">Flux</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Sub-packages -->
  <exec_depend>autonomy_manager</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
