<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_rover_description</name>
  <version>0.1.0</version>
  <description>Forest Rover URDF model, TF frames, launch files, and robot description</description>
  <maintainer email="flux@example.com">Flux</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>stm32_firmware_driver</exec_depend>
  <exec_depend>autonomy_manager</exec_depend>
  <exec_depend>yolo_detector_node</exec_depend>
  <exec_depend>color_tracker_node</exec_depend>
  <exec_depend>smoke_detection_node</exec_depend>
  <exec_depend>data_logger_node</exec_depend>
  <exec_depend>telemetry_gateway_node</exec_depend>
  <exec_depend>base_station_receiver_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
