<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_rover_perception</name>
  <version>0.1.0</version>
  <description>Forest Rover perception stack (YOLOv8 detection, color tracking, vision processing)</description>
  <maintainer email="flux@example.com">Flux</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Sub-packages -->
  <exec_depend>yolo_detector_node</exec_depend>
  <exec_depend>color_tracker_node</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
