<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_rover_utils</name>
  <version>0.1.0</version>
  <description>Forest Rover utilities, diagnostic tools, callibration scripts, and testing utilities</description>
  <maintainer email="flux@example.com">Flux</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>rosbag2</depend>
</package>
